--- a/index.html
+++ b/index.html
@@ -32,23 +32,6 @@
       <!--<input type='button' id='button' name='Retry' onclick='?' value='Retry'></input>-->
       <!-- 야구게임 End -->
     </section>
-    <script src="index.js">
-      function compare(event) {    
-        if(event.keyCode === 13) {
-          if(document.getElementById.value.length !== 3) alert('input 3 numbers');  
-          else {
-            let strike = 0;
-            let ball = 0;
-            for(let i = 0; i < comArray.length; i++) {
-              for(let j = 0; j < inputVal.length; j++) {
-                if(i == j && comArray[i] == inputVal[j]) ++strike;
-                else if(i != j && comArray[i] == inputVal[j]) ++ball;
-              }       
-            }
-            return alert([strike, ball]);
-          }
-        }
-    }
-    </script>
+    <script src="index.js"></script>
   </body>
 </html>
